fix: responsiveness on Safari

--- a/blocks/header/css/header.css
+++ b/blocks/header/css/header.css
@@ -152,7 +152,7 @@
         position: fixed;
         padding: 10px 16px;
 
-        z-index: 5;
+        z-index: 200;
     }
 
     .pre-header {
