--- a/blocks/menu-mobile/css/menu-mobile.css
+++ b/blocks/menu-mobile/css/menu-mobile.css
@@ -7,8 +7,9 @@
 
     position: fixed;
     width: 100%;
-    height: 100vh;
-    top: 69px;
+    height: calc(var(--vh, 1vh) * 100);
+    max-height: calc(var(--vh, 1vh) * 100);
+    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
@@ -20,7 +21,6 @@
 
     z-index: 100;
 
-    max-height: 90vh;
     overflow-y: auto;
 }
 
